Done 4 pages wtout router

--- a/src/components/header/coffeeHeader.scss
+++ b/src/components/header/coffeeHeader.scss
@@ -2,3 +2,8 @@
     background-image: url('../../images/coffee-page/coffee-bg-image.png');
     padding-bottom: 85px;
 }
+.pleasure-header {
+    background-image: url('../../images/coffee-page/pleasure.png');
+    padding-bottom: 85px;
+    background-repeat: no-repeat;
+}
