--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,1 +1,12 @@
+.container {
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+}
 
+.content {
+    margin: 60px 0 30px 0;
+    &__property {
+        display: flex;
+    }
+}
