--- a/src/components/headerMain/header.scss
+++ b/src/components/headerMain/header.scss
@@ -1,4 +1,4 @@
-.header {
+.main-header {
     background-image: url('../../images/mainPage/imgHeaderMain.jpg');
     background-repeat: no-repeat;
     background-size: cover;
