--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -86,6 +86,18 @@
     }
 }
 
-
+.coffee .about{
+    &__items {
+        &:after {
+            content: '';
+            position: absolute;
+            width: 240px;
+            height: 1px;
+            bottom: 0;
+            background-color: #000;
+        }
+        padding: 70px 0 60px;
+    }
+}
 
 
