--- a/src/components/header/coffeeHeader.scss
+++ b/src/components/header/coffeeHeader.scss
@@ -1,9 +1,31 @@
-.coffee-header {
-    background-image: url('../../images/coffee-page/coffee-bg-image.png');
+.header {
+    // background-image: url('../../images/mainPage/imgHeaderMain.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     padding-bottom: 85px;
+    &__navigation {
+        margin-left: 150px;
+        margin-bottom: 60px;
+        padding-top: 30px;
+    }
+    &__title {
+        color: #FFF;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        font-family: Merienda;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+}
+
+.coffee-header,
+.italy-header {
+    background-image: url('../../images/coffee-page/coffee-bg-image.png');
 }
 .pleasure-header {
     background-image: url('../../images/coffee-page/pleasure.png');
-    padding-bottom: 85px;
-    background-repeat: no-repeat;
 }
