--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -17,6 +17,10 @@
         font-style: normal;
         font-weight: 400;
         line-height: normal;
+        position: relative;
+        &--black {
+            color: black;
+        }
     }
 }
 
