--- a/src/components/headerMain/header.scss
+++ b/src/components/headerMain/header.scss
@@ -35,8 +35,6 @@
         }
     }
     &__btn {
-        display: block;
-        margin: 0 auto;
         padding: 5px 42px 5px;
         color: #FFF;
         font-family: Merienda;
@@ -47,5 +45,9 @@
         background: rgba(196, 196, 196, 0.00);
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         cursor: pointer;
+    }
+    &__link-box {
+        display: flex;
+        justify-content: center;
     }
 }
